--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <div id="app">
+    <aside>
+      <div class="aside-container">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni officiis rem, alias possimus accusantium facilis error, ex, distinctio natus consectetur unde dolores. Reiciendis voluptatem sequi labore eos magni earum debitis!
+      </div>
+    </aside>
+    <main>
+      <div class="main-container">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam temporibus natus voluptates ut eius odit qui asperiores in eligendi neque sequi totam, officia molestiae obcaecati ea ullam necessitatibus quod sit!
+      </div>
+    </main>
+  </div>
 </body>
 </html>
