--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
   <div id="app">
     <aside>
       <div class="aside-container">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni officiis rem, alias possimus accusantium facilis error, ex, distinctio natus consectetur unde dolores. Reiciendis voluptatem sequi labore eos magni earum debitis!
+        <header>
+          <img src="assets/Logo.svg" alt="ícone de festividades">
+          <h1>Festivite</h1>
+          <p>Crie um convite digital para o seu evento</p>
+        </header>
       </div>
     </aside>
     <main>
       <div class="main-container">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam temporibus natus voluptates ut eius odit qui asperiores in eligendi neque sequi totam, officia molestiae obcaecati ea ullam necessitatibus quod sit!
+        <h2>Crie seu convite</h2>
       </div>
     </main>
   </div>
