--- a/index.html
+++ b/index.html
@@ -23,6 +23,58 @@
     <main>
       <div class="main-container">
         <h2>Crie seu convite</h2>
+        <form method="post" enctype="multipart/form-data">
+          <fieldset class="event-info">
+            <legend>
+              <img src="assets/icons/calendar.svg" alt="ícone de calendario">
+              Sobre o evento
+            </legend>
+
+            <div class="input-wrapper">
+              <label for="title">Título</label>
+              <input type="text" name="title" id="title" placeholder="Nome do evento">
+            </div>
+
+            <div class="flex">
+              <div class="input-wrapper">
+                <label for="start">Início</label>
+                <input type="datetime-local" name="start" id="start">
+              </div>
+              <div class="input-wrapper">
+                <label for="end">Fim</label>
+                <input type="datetime-local" name="end" id="end">
+              </div>
+            </div>
+
+            <div class="flex">
+              <div class="input-wrapper">
+                <label>Tipo</label>
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="event-type" value="presencial" id="presencial">
+                    <label for="presencial">Presencial</label>
+                  </div>
+                  <div class="radio-inner">
+                    <div class="radio-image"></div>
+                    <input type="radio" name="event-type" value="online" id="online">
+                    <label for="online">Online</label>
+                  </div>
+                </div>
+              </div>
+              <div class="input-wrapper">
+                <label for="local">Local</label>
+                <input type="text" id="local" name="local" placeholder="Link ou endereço">
+              </div>
+            </div>
+
+            <div class="textarea-wrapper">
+              <label for="description">Descrição</label>
+              <textarea name="description" id="description" cols="60" rows="10" placeholder="Escreva sobre os detalhes do evento"></textarea>
+            </div>
+          </fieldset>
+        </form>
       </div>
     </main>
   </div>
