--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
             </div>
 
             <div class="flex">
-              <div class="input-wrapper">
+              <div class="input-wrapper flex-1">
                 <label for="start">Início</label>
                 <input type="datetime-local" name="start" id="start">
               </div>
-              <div class="input-wrapper">
+              <div class="input-wrapper flex-1">
                 <label for="end">Fim</label>
                 <input type="datetime-local" name="end" id="end">
               </div>
             </div>
 
             <div class="flex">
-              <div class="input-wrapper">
+              <div class="input-wrapper flex-1">
                 <label>Tipo</label>
 
                 <div class="radio-wrapper">
@@ -63,7 +63,7 @@
                   </div>
                 </div>
               </div>
-              <div class="input-wrapper">
+              <div class="input-wrapper flex-1">
                 <label for="local">Local</label>
                 <input type="text" id="local" name="local" placeholder="Link ou endereço">
               </div>
@@ -71,7 +71,7 @@
 
             <div class="textarea-wrapper">
               <label for="description">Descrição</label>
-              <textarea name="description" id="description" cols="60" rows="10" placeholder="Escreva sobre os detalhes do evento"></textarea>
+              <textarea name="description" id="description" cols="60" rows="30" placeholder="Escreva sobre os detalhes do evento"></textarea>
             </div>
           </fieldset>
         </form>
