Estruturando inputs do tipo radio

--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
 
                 <div class="radio-wrapper">
                   <div class="radio-inner">
-                    <div class="radio-image"></div>
                     <input type="radio" name="event-type" value="presencial" id="presencial">
-                    <label for="presencial">Presencial</label>
+                    <label for="presencial">
+                      <div class="radio-image"></div>
+                      Presencial
+                    </label>
                   </div>
                   <div class="radio-inner">
-                    <div class="radio-image"></div>
                     <input type="radio" name="event-type" value="online" id="online">
-                    <label for="online">Online</label>
+                    <label for="online">
+                      <div class="radio-image-1"></div>
+                      Online
+                    </label>
                   </div>
                 </div>
               </div>
