Estruturando os inputs radio de cores

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                 <div class="radio-wrapper">
                   <div class="radio-inner">
-                    <input type="radio" name="event-type" value="presencial" id="presencial">
+                    <input type="radio" name="event-type" value="presencial" id="presencial" checked>
                     <label for="presencial">
                       <div class="radio-image"></div>
                       Presencial
@@ -77,6 +77,65 @@
               <label for="description">Descrição</label>
               <textarea name="description" id="description" cols="60" rows="30" placeholder="Escreva sobre os detalhes do evento"></textarea>
             </div>
+          </fieldset>
+
+          <fieldset class="customization">
+            <legend>
+              <img src="./assets/icons/paintbrush.svg" alt="ícone de pincel">
+              Personalização
+            </legend>
+
+            <div class="flex">
+              <div class="input-wrapper flex-1">
+                <label>Cor principal</label>
+
+                <div class="color-wrapper">
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="blue-color" value="blue">
+                    <label for="blue-color" class="blue"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="navy-color" value="navy">
+                    <label for="navy-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="purple-color" value="purple">
+                    <label for="purple-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="fuschia-color" value="fuschia">
+                    <label for="fuschia-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="pink-color" value="pink">
+                    <label for="pink-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="danger-color" value="danger">
+                    <label for="danger-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="orange-color" value="orange">
+                    <label for="orange-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="yellow-color" value="yellow">
+                    <label for="yellow-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="lime-color" value="lime">
+                    <label for="lime-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="green-color" value="green">
+                    <label for="green-color"></label>
+                  </div>
+                  <div class="color-inner">
+                    <input type="radio" name="theme-color" id="cyan-color" value="cyan">
+                    <label for="cyan-color"></label>
+                  </div>
+                </div>
+              </div>
           </fieldset>
         </form>
       </div>
