corrigindo o tamanho dos inputs de cores

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
               Personalização
             </legend>
 
-            <div class="flex">
-              <div class="input-wrapper flex-1">
+            <div class="input-wrapper">
                 <label>Cor principal</label>
 
                 <div class="color-wrapper">
@@ -135,7 +134,11 @@
                     <label for="cyan-color"></label>
                   </div>
                 </div>
-              </div>
+            </div>
+
+            <div class="input-wrapper">
+              <label>Tema do evento</label>
+            </div>
           </fieldset>
         </form>
       </div>
