Estruturando seção tema do evento

--- a/index.html
+++ b/index.html
@@ -138,6 +138,67 @@
 
             <div class="input-wrapper">
               <label>Tema do evento</label>
+
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="birthday">
+                <img src="./assets/img/Image.png" alt="">
+                <label for="birthday">Aniversário</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="children">
+                <img src="./assets/img/Image-2.png" alt="">
+                <label for="children">Infantil</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="graduation">
+                <img src="./assets/img/Image-3.png" alt="">
+                <label for="graduation">Formatura</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="wedding">
+                <img src="./assets/img/Image-4.png" alt="">
+                <label for="wedding">Casamento</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="baby-shower">
+                <img src="./assets/img/Image-5.png" alt="">
+                <label for="baby-shower">Chá de bebê</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="bridal-shower">
+                <img src="./assets/img/Image-6.png" alt="">
+                <label for="bridal-shower">Chá de panela</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="carnaval">
+                <img src="./assets/img/Image-7.png" alt="">
+                <label for="carnaval">Carnaval</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="easter">
+                <img src="./assets/img/Image-8.png" alt="">
+                <label for="easter">Pascoa</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="june-celebration">
+                <img src="./assets/img/Image-9.png" alt="">
+                <label for="june-celebration">São João</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="halloween">
+                <img src="./assets/img/Image-10.png" alt="">
+                <label for="halloween">Halloween</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="christmas">
+                <img src="./assets/img/Image-11.png" alt="">
+                <label for="christmas">Natal</label>
+              </div>
+              <div class="theme-wrapper">
+                <input type="radio" name="party-theme" id="others">
+                <img src="./assets/img/Image-12.png" alt="">
+                <label for="others">Outro</label>
+              </div>
             </div>
           </fieldset>
         </form>
