Estruturando e estilizando o campo de termos e politicas

--- a/index.html
+++ b/index.html
@@ -274,6 +274,26 @@
               </div>
             </div>
           </fieldset>
+
+          <div class="terms-wrapper checkbox-wrapper">
+            <div class="checkbox-inner">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms">
+              <label for="terms">Li e concordo com os <strong>Termos e Condições</strong> e com a <strong>Política de Privacidade</strong></label>
+            </div>
+
+            <div class="checkbox-inner">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms">
+              <label for="terms">Aceito receber atualizações e promoções por e-mail</label>
+            </div>
+
+            <div class="checkbox-inner">
+              <div class="checkbox-image"></div>
+              <input type="checkbox" name="terms" id="terms">
+              <label for="terms">Aceito receber atualizações e promoções por SMS</label>
+            </div>
+          </div>
         </form>
       </div>
     </main>
