Criando e estilizando o botao de submit

--- a/index.html
+++ b/index.html
@@ -294,6 +294,13 @@
               <label for="terms">Aceito receber atualizações e promoções por SMS</label>
             </div>
           </div>
+
+          <div class="action-wrapper">
+            <button type="submit">
+              <div class="btn-image"></div>
+              Gerar convite
+            </button>
+          </div>
         </form>
       </div>
     </main>
